# aoc

./: skeleton.py
2024/: Cargo.toml
2024/01/: Cargo.toml  part1.py  part1.rs  part2.py  part2.rs
2024/02/: Cargo.toml  part1.py  part1.rs  part2.py  part2.rs
2024/03/: part1.py  part1.rs  part2.py  part2.rs
2024/04/: part1.py  part1.rs  part2.py  part2.rs
2024/05/: both.py  both.rs  part1.py  part1b.py  part2.py
2024/06/: both.py  both.rs  part1.py
2024/07/: part1.py  part1.rs  part2.py  part2.rs
2024/08/: part1.py  part1.rs  part2.py  part2.rs
2024/09/: part1.py  part1.rs  part2.py  part2.rs
2024/10/: both.rs  part1.py  part2.py
2024/11/: both.py  both.rs  part1.py
2024/12/: both.rs  part1.py  part2.py
2024/13/: part1.py  part2.py
2024/14/: part1.py  part2.py
2024/15/: part1.py  part2.py
2024/16/: part1.py  part2.py
2024/17/: part1.py  part2.py
2024/18/: part1.py  part2.py
2024/19/: part1.py  part2.py
2024/20/: part1.py  part2.py
2024/21/: part1.py  part2.py
2024/22/: part1.py  part2.py
2024/23/: part1.py  part2.py
2024/24/: part1.py  part2.py
