[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"

[[bin]]
name = "day01-part1"
path = "01/part1.rs"

[[bin]]
name = "day01-part2"
path = "01/part2.rs"

[[bin]]
name = "day02-part1"
path = "02/part1.rs"

[[bin]]
name = "day02-part2"
path = "02/part2.rs"

[[bin]]
name = "day03-part1"
path = "03/part1.rs"

[[bin]]
name = "day03-part2"
path = "03/part2.rs"

[[bin]]
name = "day04-part1"
path = "04/part1.rs"

[[bin]]
name = "day04-part2"
path = "04/part2.rs"

[[bin]]
name = "day05"
path = "05/both.rs"

[[bin]]
name = "day06"
path = "06/both.rs"

[[bin]]
name = "day07-part1"
path = "07/part1.rs"

[[bin]]
name = "day07-part2"
path = "07/part2.rs"

[[bin]]
name = "day08-part1"
path = "08/part1.rs"

[[bin]]
name = "day08-part2"
path = "08/part2.rs"

[[bin]]
name = "day09-part1"
path = "09/part1.rs"

[[bin]]
name = "day09-part2"
path = "09/part2.rs"
